--- a/package.json
+++ b/package.json
@@ -1,42 +1,20 @@
 {
   "name": "webboot.io",
-  "version": "1.0.0",
-  "description": "Website code for webboot.io",
-  "main": "index.js",
-  "private": "true",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "npm-run-all test:less test:html",
-    "test:less": "lessc src/less/main.less public/style.css",
-    "test:html": "cp src/index.html public/index.html",
-    "build": "npm-run-all build:less build:html build:js",
-    "build:less": "lessc src/less/main.less public/style.css --clean-css=\"--s1 --advanced --compatibility=ie8\"",
-    "build:html": "html-minifier --collapse-whitespace --remove-comments  --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true src/index.html > public/index.html",
-    "build:js": "webpack",
-    "dev-server": "webpack serve --open",
-    "watch": "onchange -i --await-write-finish 500 'src/**/*' -- npm run test",
-    "start": "npm-run-all --parallel dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/spudunk/webboot.io.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/spudunk/webboot.io/issues"
-  },
-  "homepage": "https://github.com/spudunk/webboot.io#readme",
-  "devDependencies": {
-    "html-minifier": "^4.0.0",
-    "less": "^4.1.3",
-    "less-plugin-clean-css": "^1.5.1",
-    "npm-run-all": "^4.1.5",
-    "onchange": "^7.1.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.9.1"
+    "next": "12.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3"
   }
 }
