--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "export": "next build && next export && next-export-optimize-images"
   },
   "dependencies": {
+    "@mdi/js": "^7.0.96",
+    "@mdi/react": "^1.6.1",
     "firebase": "^9.9.1",
-    "next": "12.2.3",
+    "next": "^12.3.1",
+    "npm": "^8.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.0",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "next-export-optimize-images": "^1.6.0"
