--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
+    "@vercel/analytics": "^1.0.1",
     "firebase": "^9.9.1",
     "next": "^12.3.1",
     "npm": "^8.19.2",
