--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.4.1",
     "postmark": "^3.0.18"
