--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.12",
     "next-export-optimize-images": "^3.1.0"
-
   }
 }
