--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 .DS_Store
-.firebase/
-.env
-.env*
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+node_modules
 /build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-firebase-debug.log
-functions/ui-debug.log
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
