--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "webboot.io",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "serve": "",
-    "deploy": "firebase deploy",
-    "build": "next build",
-    "start": "next build && next start",
-    "lint": "next lint",
-    "export": "next build && next export && next-export-optimize-images"
-  },
-  "dependencies": {
-    "@mdi/js": "^7.2.96",
-    "@mdi/react": "^1.6.1",
-    "firebase": "^10.1.0",
-    "next": "^13.4.12",
-    "npm": "^9.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.64.1"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^8.0.1",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.12",
-    "next-export-optimize-images": "^3.1.0"
-  }
+	"name": "webboot.io",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev --host",
+		"build": "vite build",
+		"preview": "vite preview --host",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.15",
+		"postcss": "^8.4.28",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
+	},
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/inter": "^5.0.8",
+		"@iconify/json": "^2.2.105",
+		"@unpic/svelte": "^0.0.30"
+	}
 }
