--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fontsource-variable/nunito": "^5.0.9",
     "@melt-ui/svelte": "^0.49.0",
     "lucide-svelte": "^0.276.0",
-    "postmark": "^3.0.19"
+    "postmark": "^3.0.19",
+    "stripe": "^13.6.0"
   }
 }
