--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@fontsource-variable/nunito": "^5.0.9",
     "@melt-ui/svelte": "^0.49.0",
+    "@sveltejs/adapter-cloudflare": "^2.3.3",
     "lucide-svelte": "^0.276.0",
     "postmark": "^3.0.19"
   }
