--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@melt-ui/pp": "^0.1.2",
     "@sveltejs/kit": "^1.20.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -35,9 +34,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource-variable/nunito": "^5.0.9",
-    "@melt-ui/svelte": "^0.49.0",
     "@sveltejs/adapter-cloudflare": "^2.3.3",
-    "lucide-svelte": "^0.276.0",
-    "postmark": "^3.0.19"
+    "lucide-svelte": "^0.276.0"
   }
 }
