--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write .",
-    "tail:preview": "wrangler pages deployment tail --project-name webboot-io --environment preview"
+    "tail:preview": "wrangler pages deployment tail --project-name webboot-io --environment preview",
+    "wrangler": "wrangler pages dev ./.svelte-kit/cloudflare --compatibility-date=2023-09-04 --log-level debug"
   },
   "devDependencies": {
     "@melt-ui/pp": "^0.1.2",
