--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/kit": "^1.20.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vite-pwa/sveltekit": "latest",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
@@ -31,7 +32,8 @@
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "vite-plugin-pwa": "^0.16.5"
   },
   "type": "module",
   "dependencies": {
