--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"types": ["vite-plugin-pwa/info"]
+		"types": [
+			"vite-plugin-pwa/info", 
+			"vite-plugin-pwa/client"
+		]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
