--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "svelte-sequential-preprocessor": "^2.0.1",
+    "sveltekit-superforms": "^1.8.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
-    "vite-plugin-pwa": "^0.16.5"
+    "vite-plugin-pwa": "^0.16.5",
+    "zod": "^3.22.4"
   },
   "type": "module",
   "dependencies": {
