--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "type": "module",
   "dependencies": {
+    "analytics": "^0.8.9",
+    "@analytics/simple-analytics": "^0.4.0",
     "@fontsource-variable/nunito": "^5.0.9",
     "lucide-svelte": "^0.276.0",
     "postmark": "^3.0.19"
