--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@analytics/simple-analytics": "^0.4.0",
     "@fontsource-variable/nunito": "^5.0.9",
     "analytics": "^0.8.9",
-    "lucide-svelte": "^0.276.0",
-    "postmark": "^3.0.19"
+    "lucide-svelte": "^0.276.0"
   }
 }
