--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"strict": true,
 		"types": [
 			"vite-plugin-pwa/info", 
-			"vite-plugin-pwa/client"
+			"vite-plugin-pwa/client",
+			"@cloudflare/workers-types/2023-07-01"
 		]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
