--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "pages:deploy": "bun run build && wrangler pages deploy .svelte-kit/cloudflare"
   },
   "devDependencies": {
-    "@sveltejs/adapter-cloudflare": "^2.3.3",
+    "@sveltejs/adapter-cloudflare": "^4.1.0",
+    "@sveltejs/enhanced-img": "^0.1.8",
     "@sveltejs/kit": "latest",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vite-pwa/sveltekit": "latest",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.30.0",
     "postcss": "^8.4.29",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "svelte-sequential-preprocessor": "^2.0.1",
-    "sveltekit-superforms": "^1.8.0",
+    "sveltekit-superforms": "^2.8.1",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "latest",
+    "vite": "^5.1.6",
     "zod": "^3.22.4"
   },
   "type": "module",
@@ -41,6 +41,6 @@
     "@analytics/simple-analytics": "^0.4.0",
     "@fontsource-variable/nunito": "^5.0.9",
     "analytics": "^0.8.9",
-    "lucide-svelte": "^0.276.0"
+    "lucide-svelte": "^0.356.0"
   }
 }
