--- a/package.json
+++ b/package.json
@@ -1,46 +1,57 @@
 {
-  "name": "webboot.io",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev --host",
-    "build": "vite build",
-    "preview": "vite preview --host",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
-    "pages:preview": "wrangler pages dev --compatibility-date=2024-02-08 .svelte-kit/cloudflare",
-    "pages:deploy": "bun run build && wrangler pages deploy .svelte-kit/cloudflare"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-cloudflare": "^4.9.0",
-    "@sveltejs/enhanced-img": "^0.3.9",
-    "@sveltejs/kit": "latest",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.46.1",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "svelte-sequential-preprocessor": "^2.0.2",
-    "sveltekit-superforms": "^2.24.1",
-    "tailwindcss": "^3.4.17",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "vite": "^5.4.18",
-    "zod": "^3.24.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "@analytics/simple-analytics": "^0.4.1",
-    "@fontsource-variable/nunito": "^5.2.5",
-    "analytics": "^0.8.16",
-    "lucide-svelte": "^0.356.0"
-  }
+	"name": "webboot.io",
+	"version": "0.0.1",
+	"private": true,
+	"description": "Webboot.io - Modern web development platform",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev --host",
+		"build": "vite build",
+		"preview": "vite preview --host",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"pages:preview": "wrangler pages dev --compatibility-date=2024-02-08 .svelte-kit/cloudflare",
+		"pages:deploy": "bun run build && wrangler pages deploy .svelte-kit/cloudflare",
+		"elevate": "bun run scripts/elevate.ts"
+	},
+	"dependencies": {
+		"@analytics/simple-analytics": "^0.4.1",
+		"@auth/core": "^0.39.0",
+		"@auth/d1-adapter": "^1.9.0",
+		"@auth/sveltekit": "^1.9.1",
+		"@fontsource-variable/nunito": "^5.2.5",
+		"analytics": "^0.8.16",
+		"lucide-svelte": "^0.356.0"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-cloudflare": "^4.9.0",
+		"@sveltejs/enhanced-img": "^0.3.10",
+		"@sveltejs/kit": "^2.20.8",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"autoprefixer": "^10.4.21",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.46.1",
+		"postcss": "^8.5.3",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.28.2",
+		"svelte-check": "^4.1.7",
+		"svelte-sequential-preprocessor": "^2.0.2",
+		"sveltekit-superforms": "^2.25.0",
+		"tailwindcss": "^3.4.17",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.4",
+		"wrangler": "^4.14.1",
+		"zod": "^3.24.3"
+	},
+	"engines": {
+		"node": ">=18.0.0",
+		"bun": ">=1.0.0"
+	},
+	"packageManager": "bun@1.2.10"
 }
