--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,15 @@
 name = "webboot"
 main = "src/entry.ts"
 compatibility_date = "2024-05-04"
+pages_build_output_dir = ".svelte-kit/cloudflare"
 
 [[d1_databases]]
 binding = "DB"
 database_name = "webboot_crm"
 database_id = "local"
 
-[triggers]
-crons = ["0 9 * * *"]  # Run at 9 AM every day
+# [triggers]
+# crons = ["0 9 * * *"]  # Run at 9 AM every day
 
 [vars]
 FROM_EMAIL = "chris@webboot.io"
