--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,7 @@ pages_build_output_dir = ".svelte-kit/cloudflare"
 [[d1_databases]]
 binding = "DB"
 database_name = "webboot_crm"
-database_id = "local"
+database_id = "1766519f-164f-4f32-83d0-55895feb3d41"
 
 # [triggers]
 # crons = ["0 9 * * *"]  # Run at 9 AM every day
