--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
 	"dependencies": {
 		"@analytics/simple-analytics": "^0.4.1",
 		"@fontsource-variable/nunito": "^5.2.7",
-		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"analytics": "^0.8.19",
-		"lucide-svelte": "^0.356.0"
+		"analytics": "^0.8.19"
 	},
 	"devDependencies": {
+		"lucide-svelte": "^0.356.0",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@sveltejs/enhanced-img": "^0.3.10",
 		"@sveltejs/kit": "^2.44.0",
@@ -46,8 +45,7 @@
 		"zod": "^3.25.76"
 	},
 	"engines": {
-		"node": ">=18.0.0",
-		"bun": ">=1.0.0"
+		"node": ">=18.0.0"
 	},
 	"packageManager": "bun@1.2.10"
 }
